# ctrl-vibe

./: .gitignore  README.md  docker-compose.local.yaml  docker-compose.yaml
.github/workflows/: deploy.yml
backend/: .env.example  Dockerfile  app.py  config.py  main.py  pyproject.toml  run_agent.py  test_livekit.py
backend/agents/: voice_agent.py
backend/api/: game_routes.py  livekit_routes.py  routes.py  routes_test.py  user_routes.py
backend/content/: duel_words.json  lessons.json
backend/core/: database.py  duel_manager.py  lesson_manager.py  simulation_manager.py
backend/models/: __init__.py  user.py
backend/services/: content_filter.py  gamification.py  gemini_client.py  livekit_service.py  openai_client.py  stt_client.py  tts_client.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/duel/: page.tsx
frontend/app/leaderboard/: page.tsx
frontend/app/learn/: page.tsx
frontend/app/learn/[trackId]/[lessonId]/: page.tsx
frontend/app/profile/: page.tsx
frontend/app/simulations/: page.tsx
frontend/app/simulations/[simulationId]/: page.tsx
frontend/components/: BenefitsSection.tsx  FillInBlankLesson.tsx  Footer.tsx  HeroSection.tsx  LessonCard.tsx  ListeningComprehension.tsx  MCQLesson.tsx  ProgressBar.tsx  RepeatAfterMeLesson.tsx  SentenceBuilding.tsx  TrackSection.tsx  TranslationLesson.tsx  VoiceConversation.tsx  WordMatchingLesson.tsx
frontend/components/ui/: conscious-button.tsx  input.tsx
frontend/lib/: types.ts  utils.ts
frontend/store/: duelStore.ts  leaderboardStore.ts  lessonStore.ts  trackStore.ts  xpStore.ts
