[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.1",
    "flask-cors>=6.0.1",
    "python-dotenv>=1.1.1",
    "flask-pymongo",
    "pymongo",
    "openai",
    "google-generativeai",
    "numpy",
    "pydub",
    "livekit",
    "livekit-api",
    "gunicorn",
    "quickdraw>=1.0.0",
]
