[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.1",
    "flask-cors>=6.0.1",
    "python-dotenv>=1.1.1",
    "flask-pymongo",
    "pymongo",
    "openai>=1.50.0",
    "google-generativeai",
    "numpy",
    "pydub",
    "livekit>=0.15.0",
    "livekit-api>=0.15.0",
    "livekit-agents>=0.15.0",
    "livekit-plugins-openai>=0.15.0",
    "livekit-plugins-silero>=0.15.0",
    "gunicorn",
    "quickdraw>=1.0.0",
    "websockets",
    "aiohttp",
    "asyncio-mqtt",
]